add require to imgSrc intro

--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "portfolio-johann-moreno",
   "version": "0.1.0",
-  "homepage": "https://johanson1988.github.io/web-repository-reactJS",
+  "homepage": "https://web-portfolio-johann-moreno.herokuapp.com",
   "private": true,
+  "engines": {
+    "npm":"6.14.5",
+    "node": "12.14.1"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
